--- a/BarbershopMDM/BarbershopMDM.csproj
+++ b/BarbershopMDM/BarbershopMDM.csproj
@@ -159,6 +159,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\DataContext.cs" />
+    <Compile Include="Data\Repositories\ConsumablesRepository.cs" />
+    <Compile Include="Data\Repositories\IConsumablesRepository.cs" />
     <Compile Include="Data\Repositories\ISuppliersRepository.cs" />
     <Compile Include="Data\Repositories\SuppliersRepository.cs" />
     <Compile Include="Form1.cs">
