--- a/BarbershopMDM/BarbershopMDM.csproj
+++ b/BarbershopMDM/BarbershopMDM.csproj
@@ -171,11 +171,6 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\20201224132355_Init.cs" />
-    <Compile Include="Migrations\20201224132355_Init.designer.cs">
-      <DependentUpon>20201224132355_Init.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\DataContextModelSnapshot.cs" />
     <Compile Include="Models\Consumables.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Order.cs" />
@@ -206,7 +201,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.2\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets" Condition="Exists('..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.2\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
