--- a/BarbershopMDM/BarbershopMDM.csproj
+++ b/BarbershopMDM/BarbershopMDM.csproj
@@ -163,7 +163,9 @@
     <Compile Include="Data\Repositories\EmployeesRepository.cs" />
     <Compile Include="Data\Repositories\IConsumablesRepository.cs" />
     <Compile Include="Data\Repositories\IEmployeesRepository.cs" />
+    <Compile Include="Data\Repositories\IOrdersRepository.cs" />
     <Compile Include="Data\Repositories\ISuppliersRepository.cs" />
+    <Compile Include="Data\Repositories\OrdersRepository.cs" />
     <Compile Include="Data\Repositories\SuppliersRepository.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -171,6 +173,11 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20201224162025_Init.cs" />
+    <Compile Include="Migrations\20201224162025_Init.designer.cs">
+      <DependentUpon>20201224162025_Init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\DataContextModelSnapshot.cs" />
     <Compile Include="Models\Consumables.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Order.cs" />
@@ -201,9 +208,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Migrations\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.2\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets" Condition="Exists('..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.2\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
