--- a/BarbershopMDM/BarbershopMDM.csproj
+++ b/BarbershopMDM/BarbershopMDM.csproj
@@ -167,15 +167,33 @@
     <Compile Include="Data\Repositories\ISuppliersRepository.cs" />
     <Compile Include="Data\Repositories\OrdersRepository.cs" />
     <Compile Include="Data\Repositories\SuppliersRepository.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\AccountantForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\AccountantForm.Designer.cs">
+      <DependentUpon>AccountantForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\20201224162025_Init.cs" />
-    <Compile Include="Migrations\20201224162025_Init.designer.cs">
-      <DependentUpon>20201224162025_Init.cs</DependentUpon>
+    <Compile Include="Forms\AdminForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AdminForm.Designer.cs">
+      <DependentUpon>AdminForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ManagerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ManagerForm.Designer.cs">
+      <DependentUpon>ManagerForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20201224170528_Init.cs" />
+    <Compile Include="Migrations\20201224170528_Init.designer.cs">
+      <DependentUpon>20201224170528_Init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\DataContextModelSnapshot.cs" />
     <Compile Include="Models\Consumables.cs" />
@@ -185,6 +203,18 @@
     <Compile Include="Models\Supplier.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\AccountantForm.resx">
+      <DependentUpon>AccountantForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AdminForm.resx">
+      <DependentUpon>AdminForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ManagerForm.resx">
+      <DependentUpon>ManagerForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
